--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNHwM2AtGP71ZT8Cjrmi7bO",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOxOckF6Vc7b2X33Yn6drTW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,34 +54,42 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 35
         },
-        "outputId": "cdc08061-0e76-4bb0-caab-985c82518ba2"
+        "outputId": "fcddc8d2-9c32-4a26-8f01-a9f5c18e0f7d"
       },
       "source": [
-        "grade_list = [50, 90, 91, 88, 75]\n",
-        "grade_last = grade_list[len(grade_list)-1]\n",
-        "print(grade_last)\n",
-        "if grade_last >= 90:\n",
-        "  print(\"A\")\n",
-        "elif grade_last >=80:\n",
-        "  print(\"B\")\n",
-        "elif grade_last >= 70:\n",
-        "  print(\"C\")\n",
-        "elif grade_last >= 65:\n",
-        "  print(\"D\")\n",
-        "else:\n",
-        "   print(\"Failing\")"
+        "# function grade(L) return grade of last student\n",
+        "def grade(L):\n",
+        "  last_student_score = L[-1]\n",
+        "  if last_student_score <= 65:\n",
+        "    return \"F\"\n",
+        "  elif last_student_score >=65 and last_student_score <= 69:\n",
+        "    return \"D\"\n",
+        "  elif last_student_score >= 70 and last_student_score <= 79:\n",
+        "    return \"C\"\n",
+        "  elif last_student_score  >= 80 and last_student_score <= 89:\n",
+        "    return \"B\"\n",
+        "  else:\n",
+        "   return \"A\"\n",
+        "grade([50, 90, 91, 88, 75])"
       ],
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "75\n",
-            "C\n"
-          ],
-          "name": "stdout"
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'C'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
         }
       ]
     },
@@ -109,6 +118,7 @@
         "colab": {}
       },
       "source": [
+        "# \n",
         "L = []\n",
         "L.sort()\n",
         "if len(L)%2 == true:\n",
@@ -140,13 +150,76 @@
       "metadata": {
         "id": "2f3zeZr-eWa7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e4ff7e4e-fb1e-4692-925f-00e1a8146014"
       },
       "source": [
-        ""
+        "# def fibonacii(n): return nth fibonacii\n",
+        "def fibonacii_1(n):\n",
+        "  if n <= 2:\n",
+        "    return 1\n",
+        "  else:\n",
+        "    f = fibonacii_1(n-1) + fibonacii_1(n-2)\n",
+        "  return f\n",
+        "\n",
+        "fibonacii_1(20)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6765"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f6ZcDLurlONY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "d4caa5bf-da7b-44ae-9f3f-2b659b986558"
+      },
+      "source": [
+        "# def fibonacii(n): return nth fibonacii\n",
+        "# [1]*n\n",
+        "def fibonacii_2(n):\n",
+        "  f = [1]*n\n",
+        "  for i in range(2,n):\n",
+        "    f[i] = f[i-1] + f[i-2]\n",
+        "  return f[n-1]\n",
+        "\n",
+        "fibonacii_2(100)\n"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "354224848179261915075"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -163,13 +236,79 @@
       "metadata": {
         "id": "TlcJAXrQebZZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "6d4c7307-a51a-4051-adca-e1e547bbf149"
       },
       "source": [
-        ""
+        "def perfect_square_01(x):\n",
+        "  for i in range(0, int(x**(0.5) +1)):\n",
+        "    if i**2 == x:\n",
+        "      return \"x is a perfect square\"\n",
+        "    return \"x is not a perfect square\"\n",
+        "\n",
+        "\n",
+        "perfect_square_01(213498)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'x is not a perfect square'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BFNX9D-Cqjgi",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "97db171e-d353-46c9-ce02-624f5effab3b"
+      },
+      "source": [
+        "def perfect_square_02(x):\n",
+        "  i = int(x**(0.5))\n",
+        "  if i**2 == x:\n",
+        "    return \"x is a perfect square\"\n",
+        "  return \"x is not a perfect square\"\n",
+        "\n",
+        "perfect_square_02(345134)\n"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'x is not a perfect square'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     }
   ]
 }
