--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOxOckF6Vc7b2X33Yn6drTW",
+      "authorship_tag": "ABX9TyPgZ/60xWxBiJ2s1kWr8k5Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,17 +115,41 @@
       "metadata": {
         "id": "DDHEljURePk0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "83056864-4b2f-42c5-b5e2-70e9d4489098"
       },
       "source": [
         "# \n",
-        "L = []\n",
-        "L.sort()\n",
-        "if len(L)%2 == true:\n",
+        "def median(L):\n",
+        "  L.sort()\n",
+        "  i = len(L)\n",
+        "  if i % 2 == 0:\n",
+        "    return (L[int(i/2)] + L[int(i/2-1)])/2\n",
+        "  return L[int(i/2)]\n",
+        "\n",
+        "# median([7,1,5])\n",
+        "\n",
+        "median([8,2,0,1])\n",
         "  "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
     },
     {
       "cell_type": "markdown",
