--- a/Untitled8.ipynb
+++ b/Untitled8.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled8.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOrvuvqQzsQy3WAR7ptXsc8",
+      "authorship_tag": "ABX9TyMJLMDKec7eIv3Cd3jFhLwK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -495,6 +495,86 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "X5NcBOGEoXa0",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f45e8741-4276-46e2-c765-4c2a604093df"
+      },
+      "source": [
+        "print(\"Piggott\" == distances[64][0] and \"Oak Park\" == distances[64][1])"
+      ],
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RFpKW774rmda",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "06de9ded-dbda-4163-f979-92dc0cf2cd39"
+      },
+      "source": [
+        "type(float(distances[5][2]))"
+      ],
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "avaM_UEupLsA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "bde02ce3-3398-4e71-e787-0e6d9f2f1437"
+      },
+      "source": [
+        "print(len(distances))"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "72\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "owu6xrNHkXlG",
         "colab_type": "code",
         "colab": {
@@ -526,7 +606,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "311b5fa1-e53a-4886-957e-7c8f5be58bae"
+        "outputId": "9613e1ae-cfa4-44ba-92d4-81255cc05836"
       },
       "source": [
         "import numpy as np\n",
@@ -562,7 +642,7 @@
         "\tfor i, c in enumerate(cities):\n",
         "\n",
         "\t\tif i not in visited:\n",
-        "\t\t\tdistance = dist_squared(city, c)\n",
+        "\t\t\tdistance = get_dist(city, c)\n",
         "\n",
         "\t\t\tif distance < best_distance:\n",
         "\t\t\t\tclosest_city = c\n",
@@ -572,27 +652,28 @@
         "\treturn i_closest_city, closest_city, best_distance\n",
         "\n",
         "\n",
-        "def dist_squared(c1, c2):\n",
-        "\tt1 = c2[0] - c1[0]\n",
-        "\tt2 = c2[1] - c1[1]\n",
-        "\n",
-        "\treturn t1**2 + t2**2\n",
-        "\n",
+        "def get_dist(c1, c2):\n",
+        "  i = 0\n",
+        "  while i < 72:\n",
+        "        if c1 == distances[i][0] and c2 == distances[i][1]:\n",
+        "          return float(distances[i][2]);\n",
+        "        i+=1\n",
+        "  return 0\n",
         "algorithm(cities)"
       ],
-      "execution_count": 39,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "([2, 3, 4, 6, 5, 8, 0, 1, 7], 7563.225456106842)"
+              "([4, 3, 2, 1, 0, 8, 6, 5, 7], 8581.27)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 85
         }
       ]
     }
